deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitgovexplorer
spec:
  selector:
    matchLabels:
      app: gitgovexplorer
  template:
    metadata:
      labels:
        app: gitgovexplorer
    spec:
      containers:
      - name: gitgovexplorer
        image: rg.nl-ams.scw.cloud/njkonl/gitgovexplorer:0.0.8
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "80Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1  
kind: Service
metadata:
  name: gitgovexplorer
spec:
  selector:
    app: gitgovexplorer
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitgovexplorer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: govukdiff.njk.onl
    http:
      paths:
      - path: /
        backend:
          serviceName: gitgovexplorer
          servicePort: 80
  - host: gitgovuk.njk.onl
    http:
      paths:
      - path: /
        backend:
          serviceName: gitgovexplorer
          servicePort: 80
  tls:
  - hosts:
    - govukdiff.njk.onl
    - gitgovuk.njk.onl
    secretName: govukdiff-cert
